reports/neuralnets.log
Traceback (most recent call last):
  File "/Users/witoldtenhove/opt/anaconda3/envs/tensorflow/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/witoldtenhove/opt/anaconda3/envs/tensorflow/lib/python3.7/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/witoldtenhove/opt/anaconda3/envs/tensorflow/lib/python3.7/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/witoldtenhove/opt/anaconda3/envs/tensorflow/lib/python3.7/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/witoldtenhove/opt/anaconda3/envs/tensorflow/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/Users/witoldtenhove/opt/anaconda3/envs/tensorflow/lib/python3.7/site-packages/nbclient/client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/witoldtenhove/opt/anaconda3/envs/tensorflow/lib/python3.7/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/witoldtenhove/opt/anaconda3/envs/tensorflow/lib/python3.7/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
Watch this video:

<iframe width="560" height="315" src="https://www.youtube.com/embed/aircAruvnKk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
<hr>
------------------

[0;36m  File [0;32m"<ipython-input-1-a2b09d15af82>"[0;36m, line [0;32m1[0m
[0;31m    Watch this video:[0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-a2b09d15af82>, line 1)

